--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,48 +6,48 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>519</width>
-    <height>334</height>
+    <width>1054</width>
+    <height>571</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <widget class="QTableView" name="tableView">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>30</y>
+      <width>961</width>
+      <height>401</height>
+     </rect>
+    </property>
+   </widget>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>220</y>
+      <x>50</x>
+      <y>460</y>
       <width>88</width>
       <height>36</height>
      </rect>
     </property>
     <property name="text">
-     <string>加载文件</string>
-    </property>
-   </widget>
-   <widget class="QWidget" name="widget" native="true">
-    <property name="geometry">
-     <rect>
-      <x>200</x>
-      <y>80</y>
-      <width>120</width>
-      <height>80</height>
-     </rect>
+     <string>PushButton</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>220</y>
+      <x>170</x>
+      <y>460</y>
       <width>88</width>
       <height>36</height>
      </rect>
     </property>
     <property name="text">
-     <string>新建文件</string>
+     <string>PushButton</string>
     </property>
    </widget>
   </widget>
@@ -57,7 +57,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>519</width>
+     <width>1054</width>
      <height>31</height>
     </rect>
    </property>
@@ -72,13 +72,13 @@
    </widget>
    <widget class="QMenu" name="fileOperation">
     <property name="title">
-     <string>文件操作</string>
+     <string>文件</string>
     </property>
     <addaction name="actionSave"/>
     <addaction name="actionLoad"/>
    </widget>
-   <addaction name="dataOperation"/>
    <addaction name="fileOperation"/>
+   <addaction name="dataOperation"/>
   </widget>
   <action name="actionNew">
    <property name="text">
