--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -30,7 +30,7 @@
    <widget class="QPushButton" name="searchButton">
     <property name="geometry">
      <rect>
-      <x>870</x>
+      <x>760</x>
       <y>450</y>
       <width>88</width>
       <height>41</height>
@@ -43,7 +43,7 @@
    <widget class="QLineEdit" name="searchLineEdit">
     <property name="geometry">
      <rect>
-      <x>560</x>
+      <x>430</x>
       <y>450</y>
       <width>301</width>
       <height>41</height>
@@ -63,7 +63,7 @@
    <widget class="QPushButton" name="modifyButton">
     <property name="geometry">
      <rect>
-      <x>960</x>
+      <x>860</x>
       <y>450</y>
       <width>88</width>
       <height>41</height>
@@ -71,6 +71,19 @@
     </property>
     <property name="text">
      <string>修改</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="deleteButton">
+    <property name="geometry">
+     <rect>
+      <x>960</x>
+      <y>450</y>
+      <width>88</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>删除</string>
     </property>
    </widget>
   </widget>
